--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "fs": "^0.0.1-security",
+    "html-pdf": "^3.0.1",
+    "simple-git": "^3.19.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.2.1",
